--- a/app/scss/layout/_navigation.scss
+++ b/app/scss/layout/_navigation.scss
@@ -13,7 +13,7 @@
   ); // set max-width for navigation content
   --promo-banner-height: 60px;
   --top-bar-height: 40px;
-  --header-height: calc(var(--mega-nav-height) + + var(--top-bar-height));
+  --header-height: calc(var(--mega-nav-height) + var(--top-bar-height));
   @include md() {
     --header-height: calc(
       var(--mega-nav-height) + var(--top-bar-height) +
